# mavlink-network-node

./: Cargo.toml  copy-logs.ps1  copy_logs.sh  deploy  deploy.ps1  rust-toolchain.toml
.cargo/: config.toml
examples/: full.rs  lora_recv.rs  lora_sx1262_spi_p2p.rs  lora_sx1262_uart_p2p.rs  lora_sx1276_spi_p2p.rs  lora_uart.rs  minimal.rs  service_discovery.rs  udp.rs
logs/: logs_2023-12-28_17-51-57.917.json  logs_2023-12-28_17-54-48.752.json
logs/node1/logs/: logs_2024-01-05_00-49-52.554.json  logs_2024-01-05_02-12-15.877.json  logs_2024-01-05_02-28-22.970.json  logs_2024-01-05_02-32-21.652.json
logs/node2/logs/: logs_2024-01-05_00-50-19.512.json  logs_2024-01-05_02-12-25.097.json  logs_2024-01-05_02-30-03.699.json  logs_2024-01-05_02-32-10.282.json
src/: lib.rs  main.ground.rs  main.lora.rs  main.lora_network.rs  main.lora_serial.rs  main.old.rs  main.ping.rs  main.rs  main.two_way.rs  main.udp.rs  main.udp_comm.rs
src/driver/: abstract_driver.rs  lora_driver.rs  lora_network_interface.rs  lora_sx1262_spi.rs  lora_sx1262_uart.rs  lora_sx1276_spi.rs  mod.rs  udp_driver.rs  websocket_driver.rs
src/logs/: logs_drone_1s_window.json  logs_drone_continious_window.json  logs_gw_1s_window.json  logs_gw_continous_window.json
src/logs/node1/logs/: logs_2024-02-08_20-03-26.892.json  logs_2024-02-08_20-10-55.741.json  logs_2024-02-08_20-45-25.348.json  logs_2024-02-09_09-56-10.890.json  logs_2024-02-09_11-43-35.475.json  logs_2024-02-09_11-46-32.458.json  logs_2024-02-09_11-48-08.218.json  logs_2024-02-09_12-33-50.198.json  logs_2024-02-09_13-40-13.979.json  logs_2024-02-09_13-40-34.762.json  logs_2024-02-09_13-40-51.090.json  logs_2024-02-10_18-29-30.869.json  logs_2024-02-10_19-25-33.265.json  logs_2024-02-10_19-53-17.461.json  logs_2024-02-11_12-54-27.997.json  logs_2024-02-11_12-55-18.116.json  logs_2024-02-11_12-57-24.086.json
src/logs/node2/logs/: logs_2024-02-08_20-45-32.802.json  logs_2024-02-09_09-50-46.754.json  logs_2024-02-09_09-56-05.808.json  logs_2024-02-09_09-56-52.158.json  logs_2024-02-09_11-43-50.295.json  logs_2024-02-09_12-33-52.402.json  logs_2024-02-09_13-40-20.835.json  logs_2024-02-10_18-29-42.691.json  logs_2024-02-10_18-34-01.551.json  logs_2024-02-10_18-39-31.872.json  logs_2024-02-10_18-43-09.505.json  logs_2024-02-10_18-43-39.045.json  logs_2024-02-10_18-46-38.138.json  logs_2024-02-10_19-25-39.921.json  logs_2024-02-10_19-53-20.570.json  logs_2024-02-11_00-34-29.490.json  logs_2024-02-11_12-54-25.182.json  logs_2024-02-11_12-55-15.261.json  logs_2024-02-11_12-57-20.742.json
src/network/: full_duplex_network.rs  half_duplex_network.rs  lora_network_interface.rs  mod.rs  network_interface.rs  udp_network_interface.rs
src/utils/: adapter.rs  delay_adapter.rs  discover.rs  iv.rs  logging_utils.rs  lora_serial.rs  lora_types.rs  lora_utils.rs  macros.rs  mavlink_utils.rs  mod.rs  types.rs  udp_comm.rs  udp_network_interface.rs  websocket_layer.rs
