[package]
name = "mavlink-network-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mavlink = { version = "0.12.2", features = ["serde"] }
rppal = { path = "../rppal", features = ["hal"] }
lora-phy = { path = "../lora-rs/lora-phy" }
tokio = { version = "1.15", features = ["full", "tracing"] }
embedded-hal-bus = { version = "0.1.0", features = ["async", "std"] }
embedded-hal = { version = "1" }
embedded-hal-async = { version = "1" }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = [
    "unproven",
] }
futures = "0.3.29"
# For Logging
chrono = "0.4.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", features = [
    "fmt",
    "env-filter",
    "json",
] }
regex = { version = "1", features = ["unicode-case"] }
tracing-appender = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console-subscriber = "0.2.0"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
