[package]
name = "mavlink-network-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["embedded"]
embedded = [
    "dep:rppal",
    "dep:lora-phy",
    "dep:embedded-hal-bus",
    "dep:embedded-hal",
    "dep:embedded-hal-async",
    "dep:embedded-hal-02",
]

[dependencies]
# General
tokio = { version = "1.15", features = ["full", "tracing"] }
futures = "0.3.29"
mavlink = { version = "0.12.2", features = ["serde"] }

# For Embedded
rppal = { path = "../rppal", features = ["hal"], optional = true }
lora-phy = { path = "../lora-rs/lora-phy", optional = true }
embedded-hal-bus = { version = "0.1.0", features = [
    "async",
    "std",
], optional = true }
embedded-hal = { version = "1", optional = true }
embedded-hal-async = { version = "1", optional = true }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = [
    "unproven",
], optional = true }

# For Logging
chrono = "0.4.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", features = [
    "fmt",
    "env-filter",
    "json",
] }
regex = { version = "1", features = ["unicode-case"] }
tracing-appender = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console-subscriber = "0.2.0"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"

# Other
async-trait = "0.1.77"
